--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,128 +1,146 @@
-// @use 'scss-reset/reset';
-
-$text: #0a121b;
-$background: #f9fbfd;
-$primary: #3778cc;
-$secondary: #82aee5;
-$accent: #5292e4;
+$text: #0e151a;
+$background: #fafbfc;
+$primary: #678cae;
+$secondBg: #678cae4d;
+$secondary: #b39dcb;
+$accent: #af83bd;
 
 @import url("https://fonts.googleapis.com/css?family=Poppins:700|Poppins:400");
 
 body {
   font-family: "Poppins";
   font-weight: 400;
+  background-color: $secondBg;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: "Poppins";
-  font-weight: 700;
-}
-
-html {
-  font-size: 100%;
-} /* 16px */
-
-h1 {
-  font-size: 4.21rem; /* 67.36px */
-}
-
-h2 {
-  font-size: 3.158rem; /* 50.56px */
-}
-
-h3 {
-  font-size: 2.369rem; /* 37.92px */
-}
-
-h4 {
-  font-size: 1.777rem; /* 28.48px */
-}
-
-h5 {
-  font-size: 1.333rem; /* 21.28px */
-}
-
-small {
-  font-size: 0.75rem; /* 12px */
+p {
+  padding: 0;
+  margin: 0;
 }
 
 .main-page {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr, 1fr;
-  .client-display {
-    grid-column: 1 / span 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    li {
-      list-style: none;
-      .client-card {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        background-color: $secondary;
-        padding-left: 30px;
-        padding-right: 30px;
-        transition: 0.2s ease-in-out;
-        border-radius: 10px;
-        gap: 20px;
-        padding-bottom: 20px;
-        padding-top: 10px;
-        .client {
-          display: flex;
-          justify-content: space-between;
-          width: 600px;
-          .client-basic {
-            display: flex;
-            flex-direction: column;
-          }
-        }
-        .client-information {
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          gap: 20px;
-          .client-name {
-            font-size: 40px;
-            user-select: none;
-          }
-        }
-        .account-balance {
-          font-size: 40px;
-          user-select: none;
-        }
+  grid-template-columns: minmax(150px, 200px) 1fr 0.4fr;
+  height: 100vh;
+  overflow: hidden;
+  gap: 50px;
+  .navigation-bar {
+    display: grid;
+    grid-template-rows: repeat(7, 1fr);
+    user-select: none;
+    background-color: $primary;
+    color: $text;
+    & > .account {
+      transform: scale(1.07);
+      background-color: $secondary;
+    }
+    & > .logo {
+      border-bottom: 3px solid $secondary;
+    }
+    & > * {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: 0.1s ease-in-out;
+    }
+    & > *:hover {
+      background-color: $secondary;
+      transform: scale(1.07);
+      transition: 0.1s ease-in-out;
+      cursor: pointer;
+    }
+    & > .profile {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      &:hover {
+        fill: purple;
       }
     }
   }
 }
 
-.manage-account {
+.create-client {
   display: flex;
-  justify-content: space-between;
-  .manage-account-button,
-  .delete-account {
+  overflow: hidden;
+  flex-direction: column;
+  gap: 15px;
+  align-items: flex-start;
+  padding-top: 30px;
+
+  .client-creation{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  button {
+    width: fit-content;
     padding: 0;
-    margin: 0;
-    height: 30px;
     padding-left: 10px;
     padding-right: 10px;
-    justify-self: flex-end;
+    height: 30px;
+  }
+  h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 35px;
+    font-weight: 100;
+  }
+  .client-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 250px;
+    & > * {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
-.delete-account {
-  opacity: 0.3;
-  transition: 0.2s ease-in-out;
-  &:hover {
-    opacity: 1;
-    transition: 0.2s ease-in-out;
-    background-color: #c940409f;
-    color: black;
-    border: 2px solid #4e1f1f;
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+.client-display {
+  width: 100%;
+  height: 700px;
+  overflow: scroll;
+  padding: 0;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  .client-card {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 2px solid $primary;
+    background-color: $background;
+    gap: 15px;
+    border-radius: 10px;
+    padding-bottom: 20px;
+    .manage-account{
+      display: flex;
+      justify-content: space-between;
+    }
+    .client {
+      display: flex;
+      justify-content: space-between;
+      .client-information {
+        display: flex;
+        flex-direction: column;
+        .client-name {
+          font-size: 35px;
+        }
+      }
+      .account-balance {
+        font-size: 55px;
+      }
+    }
+  }
+
+  li {
+    list-style: none;
   }
 }
