--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -143,8 +143,8 @@ p {
 }
 
 
-.modal{
-  position: absolute;
+.modal {
   display: block;
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0.459);
+  position: absolute;
 }
