--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -66,10 +66,11 @@ p {
   padding-top: 30px;
 
   .client-creation{
-    width: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    align-items: center;
   }
   button {
     width: fit-content;
@@ -88,10 +89,12 @@ p {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 250px;
+    width: 100%;
     & > * {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
+      gap: 10px;
+      font-size: 17px;
     }
   }
 }
@@ -131,6 +134,8 @@ p {
         justify-content: center;
         .client-name {
           font-size: 35px;
+          display: flex;
+          justify-content: space-between;
         }
       }
       .account-balance {
